--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
 	"require": {
 		"php": "^8.2",
+		"ext-bcmath": "*",
+		"ext-gd": "*",
 		"ext-intl": "*",
 		"ext-mbstring": "*",
 		"ext-xml": "*",
 		"ext-zip": "*",
-		"ext-gd": "*",
-		"ext-bcmath": "*",
 		"altcha-org/altcha": "^0.1.2",
 		"composer/semver": "^3.4",
 		"cweagans/composer-patches": "^1.7",
@@ -34,7 +34,8 @@
 		"sokil/php-isocodes-db-i18n": "^4.0",
 		"symfony/mailer": "^7.0",
 		"tinymce/tinymce": "^7.6",
-		"wikimedia/less.php": "3.*"
+		"wikimedia/less.php": "3.*",
+		"zircote/swagger-php": "^5.1"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~11",
